css tuning to prevent video & twitter widget from overlapping

--- a/static/new/css/style.css
+++ b/static/new/css/style.css
@@ -337,8 +337,8 @@ section.topics.duplicatable-content.home-page {
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
-    display: inline-block;
-    overflow: hidden;
+    /*display: inline-block;
+    overflow: hidden;*/
     transition: all 200ms ease-out;
     cursor: pointer;
 }
